# TargetIntel-IO

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
configs/: disease_context.yaml  resistance_axes.yaml  scoring_antibody_io.yaml  scoring_biomarker.yaml  scoring_small_molecule.yaml
docs/: ROADMAP_2_0.md
examples/: README.md
scripts/: 01_fetch_opentargets.py  01_target_prioritization_mvp.py  05_generate_cards.py  06_generate_html_reports.py  07_generate_figures.py  10_update_benchmark_snapshot.py  13_publish_depmap_v050.py
targetintel/: cli.py  feature_table.py  html_reports.py  hypothesis_cards.py  intent_ranking.py  opentargets.py  pipeline.py  resistance_ontology.py  scoring.py  visualization.py
tests/: test_claim_audit.py  test_claim_rules.py  test_depmap_html_publication.py  test_depmap_ingestion.py  test_depmap_pipeline_wiring.py  test_depmap_profiles.py  test_depmap_profiles_isolation.py  test_depmap_report_loader.py  test_depmap_v050_publication.py  test_evidence_demo.py  test_evidence_duplicates.py  test_evidence_independence.py  test_evidence_integration.py  test_evidence_store.py  test_evidence_verifier.py  test_feasibility_presentation.py  test_feasibility_profile_isolation.py  test_feasibility_profiles.py  test_feasibility_reporting_isolation.py  test_llm_cli.py  test_llm_execution.py  test_obsidian_export.py  test_obsidian_models.py  test_opentargets_normalization.py  test_persistence_models.py  test_readme_metrics.py  test_release_documentation.py  test_reviewed_evidence_persistence.py  test_snapshot_models.py  (+5 more)
(+762 files in other folders)
